--- a/tasks/user.yml
+++ b/tasks/user.yml
@@ -3,7 +3,7 @@
   group: name={{hdfs_group}} state=present
 
 - name: Add hadoop user on first namenode only and generate an ssh key
-  user: name={{hdfs_user}} comment="Hadoop superuser" uid=1040 group={{hdfs_group}} createhome=yes generate_ssh_key="{{ hdfs_ssh_fence }}"
+  user: name={{hdfs_user}} comment="Hadoop superuser" uid=1040 group={{hdfs_group}} home={{ hdfs_user_home }} createhome=yes generate_ssh_key="{{ hdfs_ssh_fence }}"
   when: inventory_hostname == hdfs_namenodes[0]
 
 - name: Create user on all machines
