--- a/tasks/ssh_fence.yml
+++ b/tasks/ssh_fence.yml
@@ -42,7 +42,7 @@
 
 - name: Check host name availability
   shell: "ssh-keygen -f {{ hdfs_ssh_known_hosts_file }} -F {{ item }}"
-  with_items: "{{ hdfs_namenodes_long }}"
+  with_items: "{{ hdfs_datanodes }}"
   when: distribute_keys
   register: ssh_known_host_results
   ignore_errors: yes
