--- a/tasks/user.yml
+++ b/tasks/user.yml
@@ -11,4 +11,4 @@
   register: created_user
 
 - import_tasks: ssh_fence.yml
-  when: hdfs_ssh_fence and inventory_hostname in hdfs_namenodes
+  when: hdfs_ssh_fence
