--- a/tasks/namenode.yml
+++ b/tasks/namenode.yml
@@ -38,6 +38,32 @@
   template: src=hdfs.service.j2 dest=/lib/systemd/system/hdfs-zkfc.service owner=root group=root mode=0644
   when: hdfs_ha_enabled and ansible_service_mgr == "systemd"
 
+- name: Set program variable to 'resourcemanager'
+  set_fact: program="resourcemanager"
+
+- name: Deploy init.d service for yarn resourcemanager
+  template: src=yarn-service.j2 dest=/etc/init.d/yarn-resourcemanager owner=root group=root mode=0755
+  register: yarn_systemd_unit_altered
+  when: hdfs_ha_enabled and ansible_service_mgr != "systemd" and inventory_hostname == hdfs_namenodes[0]
+
+- name: Deploy systemd service for yarn resourcemanager
+  template: src=yarn.service.j2 dest=/lib/systemd/system/yarn-resourcemanager.service owner=root group=root mode=0644
+  when: hdfs_ha_enabled and ansible_service_mgr == "systemd" and inventory_hostname == hdfs_namenodes[0]
+  notify: Restart yarn-resourcemanager
+
+- name: Set program variable to 'nodemanager'
+  set_fact: program="nodemanager"
+
+- name: Deploy init.d service for yarn nodemanager
+  template: src=yarn-service.j2 dest=/etc/init.d/yarn-nodemanager owner=root group=root mode=0755
+  register: yarn_systemd_unit_altered
+  when: hdfs_ha_enabled and ansible_service_mgr != "systemd" and inventory_hostname == hdfs_namenodes[0]
+
+- name: Deploy systemd service for yarn nodemanager
+  template: src=yarn.service.j2 dest=/lib/systemd/system/yarn-nodemanager.service owner=root group=root mode=0644
+  when: hdfs_ha_enabled and ansible_service_mgr == "systemd" and inventory_hostname == hdfs_namenodes[0]
+  notify: Restart yarn-nodemanager
+
 # daemon-reload cannot be sent to handler because it is needed before the end of play
 # also, we cannot use flush_handlers before the end of play, because we have other handlers
 - name: Reload systemd daemon
@@ -52,3 +78,11 @@
 - name: Register zkfc service
   service: name=hdfs-zkfc enabled=yes
   when: hdfs_ha_enabled
+
+- name: Register yarn-nodemanager service
+  service: name=yarn-nodemanager enabled=yes
+  when: hdfs_ha_enabled and inventory_hostname == hdfs_namenodes[0]
+
+- name: Register yarn-resourcemanager service
+  service: name=yarn-resourcemanager enabled=yes
+  when: hdfs_ha_enabled and inventory_hostname == hdfs_namenodes[0]
